fix layout align

--- a/app/home.css
+++ b/app/home.css
@@ -156,7 +156,7 @@
     .coreList{
         margin-left: 20px;
         padding-right: 20px;
-        text-align: center;
+        text-align: left;
     }
     .status{
         margin-top: 10px;
